<resources>
    <string name="app_name">NutriShop</string>
    <string name="into_tag">Shop smarter, Eat well, Live better!</string>
    <string name="welcome">Welcome to</string>
    <string name="intro_btn">Get Started</string>
    <string name="logo">Logo</string>
    <string name="menu_loader"><![CDATA[>]]></string>
    <string name="categories">Categories</string>
    <string name="featured_products">Featured Products</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title">title</string>
    <string name="nutrient">Nutrient</string>
    <string name="price">$-</string>
    <string name="welcome_back_to_nutrishop">Welcome back to NutriShop</string>
    <string name="welcome_subtitle">Welcome back to healthy food central</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="signup">Signup</string>
    <string name="search">Search</string>
</resources>