<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_bg"
    tools:context=".activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/welcom_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="42sp"/>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="181dp"
                app:srcCompat="@mipmap/logo"
                android:contentDescription="@string/logo"/>

            <TextView
                android:id="@+id/app_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/Green2"
                android:textAlignment="center"
                android:textSize="42sp"/>

            <TextView
                android:id="@+id/tag_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/into_tag"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start_button"
                style="@android:style/Widget.Button"
                android:layout_width="328dp"
                android:layout_height="78dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="350dp"
                android:background="@drawable/light_green_bg"
                android:text="@string/intro_btn"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>