<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Image at the top -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:scaleType="centerCrop"
        android:src="@drawable/createaccscreen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />





    <androidx.cardview.widget.CardView
        android:id="@+id/formCard"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginTop="-50dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/createAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Account"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lets join Nutrishop today"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:layout_marginBottom="16dp"/>



            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittxt_bg"
                android:drawableStart="@android:drawable/ic_dialog_email"
                android:drawableTint="@color/black"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />


            <EditText
                android:id="@+id/mobileInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittxt_bg"
                android:drawableStart="@android:drawable/ic_menu_call"
                android:drawableTint="@color/black"
                android:drawablePadding="10dp"
                android:hint="@string/enter_mobile"
                android:inputType="phone"
                android:padding="12dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_edittxt_bg"
                    android:drawableStart="@android:drawable/ic_lock_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/togglePasswordVisibility"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/togglePasswordVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    app:srcCompat="@android:drawable/ic_menu_view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/Green1"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/becomeSellerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Not looking to shop? Become a Seller"
                android:textColor="@color/light_red"
                android:textSize="14sp" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
